FIX: correction UserResponseDTO (getters/setters) + mapping service